refactored methods and added url decoding on filters, keyword and browse fields